--- a/src/index.css
+++ b/src/index.css
@@ -5,20 +5,20 @@ body {
 }
 
 .maze {
-  border: 0.25em solid blue;
+  border: 2px solid blue;
   overflow: hidden;
   margin: 0 auto;
-  width: 25em;
+  border-collapse: collapse;
+  /*width: 25em;*/
 }
 
 .maze-row {
-  clear: left;
+  display: flex;
 }
 
 .mazetile {
-  border: 0.25em solid blue;
-  width: 2em;
-  height: 2em;
-  float: left;
+  border: 2px solid blue;
+  width: 20px;
+  height: 20px;
   background: red;
 }
